finalize 2 element trajectories